crates/sesh-integration-tests/tests/snapshots/test__repo_log_success.md.snap
---
source: crates/sesh-integration-tests/tests/test.rs
expression: runner.transcript
---
# Repo log success preview

> [!INFO]
> **Directive quick reference**
>
> | Directive | Description |
> | --- | --- |
> | `:s` / `:sh <cmd...>` | Run host command (Rust `Command` + shlex args) |
> | `:t` / `:tmux <args...>` | Run tmux command on test socket |
> | `:p` / `:pane <target>` | Change current tmux pane target |
> | `:k` / `:keys <tokens...>` | Send key tokens and/or quoted text |
> | `:snap [dregexdrepld ...]` | Capture current pane with optional replacements |

:t new-session -d -s session-repo -x 120 -y 40 "sleep 3600"
:t set-option -t session-repo -q @sesh.repo /home/test/repo
:s python3 -c "from pathlib import Path; Path('jj.stdout').write_text('@  zzzzzzzz user@example.com 2026-02-14 12:00:00 main 12345678\n|  test commit one\no  yyyyyyyy user@example.com 2026-02-14 11:00:00 main 87654321\n|  test commit two\n')"
:snap /zz-sesh-ui-runner/<RUNNER>/ /[⠋⠙⠹⠸⠼⠴⠦⠧⠇⠏]/*/
```terminal
Session:                                        │@  zzzzzzzz user@example.com 2026-02-14 12:00:00 main 12345678
  2/2                                        0/0│|  test commit one
> session-repo                             ~/r..│o  yyyyyyyy user@example.com 2026-02-14 11:00:00 main 87654321
  <RUNNER>                             │|  test commit two
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
```

vim: set ft=markdown:
